--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -35,7 +35,7 @@ plantilla.categorias=Categories
 plantilla.derechos=TechShop All Rights Reserved 2023
 plantilla.productos=Products
 plantilla.pruebas=Test
-plantilla.idioma=Lenguaje
+plantilla.idioma=Languaje
 plantilla.asociaciones=Asociations
 plantilla.consultas=Queries
 plantilla.suTienda=Your online store
